# Stormtape-Optimization

./: README.md
locust/: analisys.py  benchmark.py  benchmark_single.py  client.py  locustfile.py
locust/results/20251014_1542/: summary.md  test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv  test_20users_cpu.csv  test_20users_stats.csv  test_20users_stats_history.csv  test_30users_cpu.csv  test_30users_stats.csv  test_30users_stats_history.csv  test_40users_cpu.csv  test_40users_stats.csv  test_40users_stats_history.csv  test_50users_cpu.csv  test_50users_stats.csv  test_50users_stats_history.csv
locust/results/20251014_1547/: summary.md  test_100users_cpu.csv  test_100users_stats.csv  test_100users_stats_history.csv  test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv  test_200users_cpu.csv  test_200users_stats.csv  test_200users_stats_history.csv  test_400users_cpu.csv  test_400users_failures.csv  test_400users_stats.csv  test_400users_stats_history.csv  test_50users_cpu.csv  test_50users_stats.csv  test_50users_stats_history.csv
locust/results/20251016_1539/: test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv
locust/results/20251016_1540/: summary.md  test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv  test_20users_cpu.csv  test_20users_stats.csv  test_20users_stats_history.csv  test_30users_cpu.csv  test_30users_stats.csv  test_30users_stats_history.csv
locust/results/20251121_0139/: summary.md
locust/results/20251126_1754/: summary.md  test_100users_cpu.csv  test_100users_stats.csv  test_100users_stats_history.csv  test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv  test_200users_cpu.csv  test_200users_stats.csv  test_200users_stats_history.csv  test_400users_cpu.csv  test_400users_stats.csv  test_400users_stats_history.csv  test_50users_cpu.csv  test_50users_stats.csv  test_50users_stats_history.csv
locust/results/20251202_0012/: test_10users_cpu.csv  test_10users_stats.csv  test_10users_stats_history.csv
locust/results/20251203_0012_single/: summary.md  test_100_files_stats.csv  test_100_files_stats_history.csv  test_10_files_stats.csv  test_10_files_stats_history.csv  test_200_files_stats.csv  test_200_files_stats_history.csv  test_50_files_stats.csv  test_50_files_stats_history.csv
locust/results/20251203_0018_single/: summary.md  test_100_files_stats.csv  test_100_files_stats_history.csv  test_10_files_stats.csv  test_10_files_stats_history.csv  test_200_files_stats.csv  test_200_files_stats_history.csv  test_50_files_stats.csv  test_50_files_stats_history.csv
locust/results/20251205T134418_1/: test_100_files_stats_history.csv  test_10_files_stats_history.csv  test_200_files_stats_history.csv  test_50_files_stats_history.csv
locust/results/20251205T134903_1/: test_100_files_stats_history.csv  test_10_files_stats_history.csv  test_200_files_stats_history.csv  test_50_files_stats_history.csv
locust/results/20251205T135008_1/: test_10_files_stats_history.csv  test_50_files_stats_history.csv
locust/results/20251205T135034_1/: test_10_files_stats_history.csv
locust/results/20251205_1203_single/: test_10_files_exceptions.csv  test_10_files_stats_history.csv
locust/results/20251205_1205_single/: summary.md  (+8 more)
storm-tape/: .gitignore  CMakeLists.txt  README.md  files_100.txt  files_500.txt  vcpkg.json
storm-tape/.devcontainer/: devcontainer.json
storm-tape/cmake/: lint-targets.cmake  lint.cmake
storm-tape/docker/: Dockerfile
storm-tape/scripts/: simple_req_generator.sh
storm-tape/src/: access_logger.cpp  access_logger.hpp  archiveinfo_response.cpp  cancel_response.hpp  configuration.cpp  configuration.hpp  database.cpp  database.hpp  database_soci.cpp  database_soci.hpp  delete_response.cpp  extended_attributes.hpp  file.cpp  file.hpp  http_text_map_carrier.hpp  in_progress_request.hpp  io.hpp  json.cpp  local_storage.cpp  main.cpp  profiler.hpp  release_response.cpp  release_response.hpp  requests_with_paths.cpp  routes.cpp  routes.hpp  stage_request.cpp  stage_request.hpp  stage_response.cpp  stage_response.hpp  status_response.hpp  storage.hpp  takeover_request.cpp  takeover_request.hpp  takeover_response.hpp  tape_service.cpp  tape_service.hpp  tape_service_utils.cpp  tape_service_utils.hpp  telemetry.cpp  (+9 more)
storm-tape/telemetry/: README.md
storm-tape/tests/: CMakeLists.txt  configuration.t.cpp  errors.t.cpp  fixture.t.cpp  fixture.t.hpp  io.t.cpp  parallel.b.cpp  stage_request.t.cpp  storage_area_resolver.t.cpp  tape_service.t.cpp
storm-tape2/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
storm-tape2/.devcontainer/: Dockerfile  devcontainer.json
storm-tape2/docker/library-scripts/: provide-deps.sh  provide-user.sh
storm-tape2/patches/: file_system.patch  info.md  tape_service_par.patch
storm-tape2/scripts/: cov-report.sh
storm-tape2/src/: access_logger.cpp  app.hpp  archiveinfo_response.hpp  cancel_response.cpp  configuration.cpp  configuration.hpp  database_soci.cpp  database_soci.hpp  delete_response.hpp  errors.hpp  extended_attributes.cpp  extended_file_status.cpp  extended_file_status.hpp  http_text_map_carrier.cpp  http_text_map_carrier.hpp  in_progress_response.cpp  in_progress_response.hpp  io.cpp  io_utils.hpp  io_utils_UNUSED_EXPERIMENTAL.hpp  local_storage.hpp  main.cpp  profiler.cpp  readytakeover_response.hpp  requests_with_paths.hpp  routes.cpp  status_response.cpp  storage_area_resolver.cpp  storage_area_resolver.hpp  tape_service.cpp  telemetry.cpp  telemetry_attributes.cpp  telemetry_attributes.hpp  trace_span.cpp  trace_span.hpp  tracer_provider.cpp  tracer_provider.hpp  types.hpp  uuid_generator.cpp
storm-tape2/src/db/: db_access.cpp  db_access.hpp  db_writer.cpp  db_writer.hpp  sqlite_pool.cpp  sqlite_pool.hpp
storm-tape2/telemetry/: docker-compose.yaml
storm-tape2/telemetry/nginx/: Dockerfile
storm-tape2/telemetry/opa/: config.yaml
storm-tape2/tests/: CMakeLists.txt  all.t.cpp  configuration.t.cpp  fixture.t.cpp  fixture.t.hpp
(+301 files in other folders)
